--- a/application.yml
+++ b/application.yml
@@ -1,2 +1,3 @@
 eureka.client.serviceUrl.defaultZone: http://localhost:8010/eureka/
 server.port=${PORT:${SERVER_PORT:0}}
+management.endpoints.web.exposure.include: "*"
