--- a/lab-4-nombres-api.yml
+++ b/lab-4-nombres-api.yml
@@ -1,1 +1,1 @@
-nombres: SOAP du macaco 🐒🐒, Adrian Swagger 😎😎, Mauricio Mapping 🐈🐈, Cobra Kai 🐍🐍
+nombres: SOAP du macaco 🐒🐒, Adrian Swagger 😎😎, Mauricio Mapping 🐈🐈, Cobra Kai 🐍🐍, John Fuse ⚡️⚡️
