--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,4 @@
 eureka.client.serviceUrl.defaultZone: http://localhost:8010/eureka/
+eureka.instance.leaseRenewalIntervalInSeconds: 10
 server.port: ${PORT:${SERVER_PORT:0}}
 management.endpoints.web.exposure.include: "*"
